syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/DebdipWritesCode/VisitorManagementSystem/pb";

message CreateUserRequest {
  string phone_number = 1;
  string first_name = 2;
  string last_name = 3;
  string role = 4;
}

message CreateUserResponse {
  User user = 1;
}