syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "rpc_create_user.proto";
import "rpc_login_user.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/DebdipWritesCode/VisitorManagementSystem/pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "VisiTrack API";
    version: "1.0.0";
    description: "API for managing a Visitor Management System.";
    contact: {
      name: "Debdip Mukherjee";
      url: "https://github.com/DebdipWritesCode";
      email: "debdipmukherjee52@gmail.com";
    };
  };
};

service VisiTrack {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
      post: "/v1/create_user"
      body: "*"
    };
  };
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse) {
    option (google.api.http) = {
      post: "/v1/login_user"
      body: "*"
    };
  };
}